--- a/data/creatures/hobgoblin_infantry.yaml
+++ b/data/creatures/hobgoblin_infantry.yaml
@@ -8,7 +8,8 @@ keywords:
 alignment: lawful evil
 ac: 15
 armor:
-  - scale mail
+  - studded leather
+  - shield
 hd: 4d8 + 4
 speed:
   walk: 30
@@ -27,12 +28,12 @@ features:
   disciplined:
     - Hobgoblins have advantage on saving throws against being frightened or charmed as long as they are within 60 feet of a hobgoblin ally they can see and hear who isn't incapacitated.
 actions:
-  glaive:
+  longsword:
     melee: true
     weapon: true
     attack: true
     hit: 4
-    reach: 10
+    reach: 5
     targets: 1
-    damage: 1d10+2
+    damage: 1d8+2
     damage_type: slashing
