Beyond the Wall (BtW session 2)

--- a/data/creatures/belnys.yaml
+++ b/data/creatures/belnys.yaml
@@ -26,9 +26,11 @@ languages:
   - draconic
 features:
   cold_resistance:
-    - Belnys has resistance to cold damage.
+    text:
+      - Belnys has resistance to cold damage.
   reckless:
-    - At the start of her turn, Belnys can gain advantage on all melee weapon attack rolls during that turn, but attack rolls against her have advantage until the start of her next turn.
+    text:
+      - At the start of her turn, Belnys can gain advantage on all melee weapon attack rolls during that turn, but attack rolls against her have advantage until the start of her next turn.
 actions:
   greatsword:
     melee: true
@@ -41,4 +43,5 @@ actions:
     damage_type: slashing
   cold_breath:
     recharge: Recharges after a Short or Long Rest
-    text: Belnys exhales cold in a 15-foot cone. Each creature in that area must make a DC 12 Dexterity saving throw, taking 7 (2d6) cold damage on a failed save, or half as much damage on a successful one.
+    text:
+      - Belnys exhales cold in a 15-foot cone. Each creature in that area must make a DC 12 Dexterity saving throw, taking 7 (2d6) cold damage on a failed save, or half as much damage on a successful one.
