--- a/data/creatures/dire_wolf_skeleton.yaml
+++ b/data/creatures/dire_wolf_skeleton.yaml
@@ -33,5 +33,5 @@ actions:
     targets: 1
     damage: 2d4+3
     damage_type: piercing
-    extra:
-      - and the target must succeed on a DC 13 Strength saving throw or be knocked prone.
+    text:
+      - ", and the target must succeed on a DC 13 Strength saving throw or be knocked prone."
