--- a/data/creatures/lokhan.yaml
+++ b/data/creatures/lokhan.yaml
@@ -1,4 +1,4 @@
-name: Orc Shaman
+name: Lokhan
 tier: journeyman
 number: party
 size_class: medium
@@ -8,19 +8,22 @@ keywords:
 alignment: chaotic evil
 ac: 12
 armor:
-  - hide
-hd: 8d8
+  - leather
+hd: 6d8+12
 speed:
   walk: 30
 ability_scores:
   str: 12
-  dex: 10
-  con: 11
+  dex: 13
+  con: 14
   int: 12
-  wis: 16
-  cha: 12
+  wis: 11
+  cha: 16
+saving_throws:
+  wis: 2
+  cha: 5
 skills:
-  nature: 3
+  deception: 5
 senses:
   darkvision: 60
 languages:
@@ -31,25 +34,26 @@ features:
     text:
       - As a bonus action, the orc can move up to its speed toward a hostile creature that it can see.
 spellcasting:
-  level: 5
-  ability: wis
+  level: 4
+  ability: cha
   dc: 13
   attack: 5
-  intro: The orc shaman is a 5th-level spellcaster.
-  outro: "It has the following druid spells prepared:"
-  slots: [ 0, 4, 3, 2 ]
+  warlock: true
+  intro: Lokhan is a 4th-level spellcaster.
+  outro: "He regains expended spell slots after a short rest. He knows the following warlock spells:"
   spells:
-    - [ frostbite, gust, mold earth ]
-    - [ healing word, longstrider, thunderwave ]
-    - [ flaming sphere, lesser restoration, spike growth ]
-    - [ call lightning, dispel magic ]
+    - [ eldritch blast, frostbite, prestidigitation ]
+    - [ armor of agathys, hex ]
+    - [ darkness, mind spike, shatter ]
 actions:
-  quarterstaff:
+  spear:
     melee: true
     weapon: true
     attack: true
+    ranged: true
     hit: 3
     reach: 5
+    range: [20, 60]
     targets: 1
     damage: 1d8+1
-    damage_type: bludgeoning
+    damage_type: piercing
