Make Headdress of the Warchief sentient

--- a/data/items/headdress_of_the_warchief.yaml
+++ b/data/items/headdress_of_the_warchief.yaml
@@ -5,4 +5,4 @@ attunement: requires attunement by an orc or half-orc
 text:
   - While wearing this black iron, spiked band on your head, your Charisma score increases by 2 (to a maximum of 20), and you have advantage on Charisma checks made to interact with orcs.
   - In addition, you gain the ability to move up to your speed towards a hostile creature you can see as a bonus action. You must end this movement closer to the hostile creature.
-  - Finally, while wearing this headdress, you can cause your eyes to glow with a cold blue light.
+  - While wearing this headdress, you can cause your eyes to glow with a cold blue light.
