--- a/data/creatures/polg.yaml
+++ b/data/creatures/polg.yaml
@@ -1,4 +1,4 @@
-name: Orc Chief
+name: Polg
 tier: journeyman
 number: pair
 size_class: medium
@@ -8,27 +8,26 @@ keywords:
 alignment: chaotic evil
 ac: 16
 armor:
-  - chain mail
-hd: 8d8+24
+  - scale mail
+  - shield
+hd: 10d8+24
 speed:
   walk: 30
 ability_scores:
   str: 18
-  dex: 14
+  dex: 12
   con: 16
-  int: 11
-  wis: 11
-  cha: 14
-saving_throws:
-  str: 7
-  dex: 5
+  int: 8
+  wis: 10
+  cha: 12
 skills:
-  intimidation: 5
+  athletics: 7
+  intimidation: 4
+  perception: 3
 senses:
   darkvision: 60
 languages:
   - orc
-  - common
 features:
   aggressive:
     text:
@@ -36,21 +35,21 @@ features:
 actions:
   multiattack:
     text:
-      - The orc chief makes two attacks with its greataxe or its spear.
-  greataxe:
+      - Polg makes two attacks with her battleaxe or her javelin.
+  battleaxe:
     attack: true
     melee: true
     weapon: true
-    hit: 6
+    hit: 7
     reach: 5
-    damage: 1d12+4
+    damage: 1d8+4
     damage_type: slashing
-  spear:
+  javelin:
     attack: true
     melee: true
     ranged: true
     weapon: true
-    hit: 6
+    hit: 7
     reach: 5
     range: [20, 60]
     damage: 1d6+4
