--- a/data/items/vorastrixiv.yaml
+++ b/data/items/vorastrixiv.yaml
@@ -12,10 +12,10 @@ effects:
   lightning_resistance:
     - While you have the jewel embedded in your flesh and are attuned to Vorastrixiv, you gain resistance to lightning damage.
   vorastrixiv_spells:
-    - While you have the jewel embedded in your flesh and are attuned to Vorastrixiv, you learn the following additional spells as sorcerer spells when your sorcerer level is high enough to learn spells of that level.
+    - While you have the jewel embedded in your flesh and are attuned to Vorastrixiv, you gain the ability to cast the following additional spells as sorcerer spells when your sorcerer level is high enough to learn spells of that level. These spells are a manifestation of Vorastrixiv's power; you do not actually learn the spells, and you lose the ability to cast them if you are no longer attuned to Vorastrixiv.
     - <table><thead><tr><th>Spell Level</th><th>Spell</th></tr></thead><tbody><tr><td>1st</td><td class="spell">charm person</td></tr><tr><td>2nd</td><td class="spell">suggestion</td></tr><tr><td>3rd</td><td class="spell">tongues</td></tr><tr><td>4th</td><td class="spell">dominate beast</td></tr><tr><td>5th</td><td class="spell">dominate person</td></tr></tbody></table>
   willing_vessel:
-    - Vorastrixiv may try to trick an attuned creature into embedding the jewel, but she cannot force them to do so. However, once embedded, Vorastixiv gains more influence. While you have Vorastixiv embedded in your flesh, you have disadvantage on Charisma saving throws to prevent her from taking control of you.
+    - Vorastrixiv may try to trick an attuned creature into embedding the jewel, but she cannot force them to do so. However, once embedded, Vorastixiv gains more influence. While you have Vorastrixiv embedded in your flesh, you have disadvantage on Charisma saving throws to prevent her from taking control of you.
   sentience:
     - Vorastrixiv is a sentient jewel of lawful evil alignment, with an Intelligence of 15, a Wisdom of 13, and a Charisma of 20. She can see and hear out to a range of 120 ft.
     - Vorastrixiv can speak, read, and understand Common and Draconic, and can communicate telepathically with a creature attuned to her. Her voice is sibilant and soft. While you are attuned to her, Vorastrixiv also understands every language you know.
