Add Rathbaran gazetteer

--- a/data/items/stumblefoot_amulet.yaml
+++ b/data/items/stumblefoot_amulet.yaml
@@ -4,6 +4,11 @@ rarity: very rare
 attunement: requires attunement by a halfling
 text:
   - This circular medallion is made of tarnished metal, and is emblazoned with a setting sun behind a majestic ship. On first glance, it does not appear to have more than sentimental value. A <span class="spell">detect magic</span> spell does not reveal that the amulet is magical. But during Cyr Stumblefoot's initiation on the wall, the amulet revealed one of its secrets.
+  - The amulet has 3 charges for the following properties. It regains 1d3 expended charges daily at dawn.
 effects:
   luff up:
     - The amulet fills you with confidence as you leap into the air, and you feel the wind supporting you. You can use your Wisdom score instead of your Strength score when calculating how long or high you can jump.
+  cats paw:
+    - While wearing this amulet, you can use an action to expend 1 charge to cast <span class="spell">gust</span> (save DC 15).
+  taken aback:
+    - While wearing this amulet, you can use an action to expend 2 charges to cast <span class="spell">gust of wind</span> (save DC 15).
