--- a/data/items/headdress_of_the_warchief.yaml
+++ b/data/items/headdress_of_the_warchief.yaml
@@ -6,3 +6,8 @@ text:
   - While wearing this black iron, spiked band on your head, your Charisma score increases by 2 (to a maximum of 20), and you have advantage on Charisma checks made to interact with orcs.
   - In addition, you gain the ability to move up to your speed towards a hostile creature you can see as a bonus action. You must end this movement closer to the hostile creature.
   - While wearing this headdress, you can cause your eyes to glow with a cold blue light.
+  - <span class="subhead">Sentience.</span> The <span class="magic">headdress of the warchief</span> is a sentient chaotic evil item with an Intelligence of 17, a Wisdom of 12, and a Charisma of 19. It has hearing and darkvision out to a range of 120 feet.
+  - The headdress can speak, read, and understand Orcish, and can communicate with its wearer telepathically. Its voice is deep and echoing. While you are attuned to it, the <span class="magic">headdress of the warchief</span> also understands every language you know.
+  - <span class="subhead">Personality.</span> The headdress' purpose is to unite the orcish peoples of Nuvenel and lead them in perpetual war against all others. It values strength, brutality, and courage, and it despises mercy, weakness, and cowardice. Conflict arises if the wearer shies away from combat or shows mercy to fallen opponents.
+  - The headdress longs be worn by an orc worthy of leading the combined orc tribes of Nuvenel. If it believes such an orc exists, it will do everything in its power to make its way to them.
+  - The identity of the intelligence in the headdress is a secret that it keeps from anyone other than the true warchief.
