--- a/data/items/rod_of_fire_absorption.yaml
+++ b/data/items/rod_of_fire_absorption.yaml
@@ -4,4 +4,4 @@ rarity: common
 text:
   - This is a rod of blackened, cold iron. While holding this rod, you can use your reaction when you take fire damage to reduce some of the incoming damage by absorbing it into the rod. The rod absorbs 2d6 fire damage, reducing the amount you take by that much. If you have resistance to fire damage, subtract this damage before applying your resistance.
   - Each time it absorbs fire, the rod oxidizes rapidly. When it has absorbed a total of 15 points of damage, the rod becomes useless and loses its magic.
-  - As an action, you can use the rod to extinguish a non-magical fire that fits within a 5-ft. cube. When used in this way, reduce the amount of damage the rod is capable of absorbing by 5.
+  - As an action, you can use the rod to attempt extinguish a magical or non-magical fire that fits within a 5-ft. cube. The rod absorbs the amount of damage a creature would take upon entering the fire. If it absorbs all of the damage, the fire is extinguished.
